@@ -6,6 +6,9 @@
 	(move_before) (move_after) Change first release designation
 	to PyGTK 2.2.
 
+	* pygtk-gtktreemodel.xml (get) Add description of this PyGTK 2.4
+	method.
+
 2004-05-06  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtktreestore (insert) (insert_after) (insert_before)
